<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".ui.student.routine.saturday.RoutineSaturdayAddUpdateFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/subjectDropdown"
        style="@style/Style.ExposedDropDown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/choose_subject"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/subjectSelection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/timeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subjectDropdown">

        <Button
            android:id="@+id/saturdayTimeStartText"
            style="@style/Style.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:text="@string/start_time_button" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:gravity="center"
            android:text="@string/to"
            android:textSize="30sp"
            app:layout_constraintHorizontal_bias="0.5" />

        <Button
            android:id="@+id/saturdayTimeEndText"
            style="@style/Style.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:text="@string/end_time_button" />
    </LinearLayout>

    <Button
        android:id="@+id/saturdaySaveButton"
        style="@style/Style.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>